# thedesk-xdg-utils

./: CMakeLists.txt  thedesk-xdg-utils.pro
thedesk-open/: CMakeLists.txt  associations.conf  fileassociationselect.cpp  fileassociationselect.h  fileassociationselect.ui  main.cpp  setdefaultpopover.cpp  setdefaultpopover.h  setdefaultpopover.ui  thedesk-open.pro
thedesk-open/translations/: aa_ET.ts  am_ET.ts  ar_AE.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  ar_YE.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  de_DE.ts  en_CA.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_CA.ts  fr_FR.ts  ha_NE.ts  hi_IN.ts  ho_PG.ts  hr_HR.ts  hu_HU.ts  hy_AM.ts  id_ID.ts  is_IS.ts  (+37 more)
thedesk-xdg-settings/: CMakeLists.txt  main.cpp  thedesk-xdg-settings.pro
thedesk-xdg-settings/translations/: am_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  de_DE.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_PA.ts  es_PY.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fj_FJ.ts  fr_FR.ts  ha_NE.ts  hi_IN.ts  hr_HR.ts  hu_HU.ts  hy_AM.ts  is_IS.ts  it_IT.ts  iu_CA.ts  lb_LU.ts  lg_UG.ts  (+31 more)
